--- a/css/style.scss
+++ b/css/style.scss
@@ -206,6 +206,11 @@ li {
     padding: 2rem;
 }
 
+.info__boxes .row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .info-box {
     padding: 1.5rem 0;
 }
